--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,12 @@
 {
     "$schema": "https://getcomposer.org/schema.json",
-    "name": "laravel/vue-starter-kit",
+    "name": "mastashake08/saas-vue-starter",
     "type": "project",
-    "description": "The skeleton application for the Laravel framework.",
+    "description": "Community Starter Kit for Laravel and Vue 3 with Inertia.js and Cashier for SaaS applications.",
     "keywords": [
         "laravel",
-        "framework"
+        "framework",
+        "laravel-cashier"
     ],
     "license": "MIT",
     "require": {
