--- a/.env.example
+++ b/.env.example
@@ -67,3 +67,7 @@ VITE_APP_NAME="${APP_NAME}"
 STRIPE_KEY=
 STRIPE_SECRET=
 STRIPE_WEBHOOK_SECRET=
+
+REVERB_APP_ID=my-app-id
+REVERB_APP_KEY=my-app-key
+REVERB_APP_SECRET=my-app-secret
