--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,14 @@
         "php": "^8.2",
         "inertiajs/inertia-laravel": "^2.0",
         "laravel/cashier": "^15.6",
+        "laravel/folio": "^1.1",
         "laravel/framework": "^12.0",
+        "laravel/prompts": "^0.3.5",
+        "laravel/pulse": "^1.4",
+        "laravel/reverb": "^1.0",
+        "laravel/scout": "^10.14",
+        "laravel/socialite": "^5.20",
+        "laravel/telescope": "^5.7",
         "laravel/tinker": "^2.10.1",
         "tightenco/ziggy": "^2.4"
     },
